--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-<script src="lib/jquery-3.7.1.min.js"></script>
+<script src="Assests/lib/jquery-3.7.1.min.js"></script>
 <section>
     <div id="div1">
         <div class="box"></div>
